# AGeval

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  Dockerfile.worker  LAUNCH_POST.md  README.md  docker-compose.yml  example_agent.py  main.py  product_launch_scope.md  publish.sh  pyproject.toml  railway.toml  rate_limiter.py  real_agent_test.py  render.yaml  requirements-dev.txt  requirements.txt  worker.py
.github/actions/score-gate/: action.yml  main.py
.github/workflows/: ci.yml
ageval/: __init__.py  anthropic_tracer.py  auto.py  cli.py  llm_metrics.py  metrics.py  openai_tracer.py  otel.py  pyproject.toml  session.py  tracer.py
ageval_package/: README.md  __init__.py  pyproject.toml  tracer.py
api/: datasets.py  deps.py  failures.py  jobs.py  keygen.py  redteam.py  redteam_engine.py  regression.py  schemas.py  synthetic.py
dashboard/: app.js  index.html  style.css
eval/: __init__.py  live.py  llm_judge.py  pairwise.py  policy.py  reference.py  relative.py  rules.py  test_rules.py  trajectory.py
examples/: hammer_agents.py  prove_real_agent.py  run_hammer.sh
examples/agents/: 01_customer_support_openai.py  02_ecommerce_order_openai.py  03_travel_concierge_openai.py  04_devops_incident_openai.py  05_financial_analyst_openai.py  06_research_assistant_anthropic.py  07_sales_outreach_anthropic.py  08_coding_agent_anthropic.py  09_langgraph_support_router.py  10_langgraph_data_pipeline.py  11_langgraph_human_in_loop.py  12_crewai_marketing_crew.py  13_crewai_recruiting_crew.py  14_mcp_server_agent.py  15_mcp_anthropic_agent.py  16_autogen_group_chat.py  17_rpa_back_office_agent.py  18_langgraph_long_research.py  19_langgraph_supervisor_team.py  20_langgraph_failing_retry_loop.py  21_langgraph_failing_bad_args.py  README.md  _common.py  _harness.py  _lgstate.py  budget_guard.py  real_tools.py  run_all.py  sideeffects.py  toolkit.py
examples/agents/fleet/: README.md  budget_openai.py  factory.py  registry.py  run_fleet.py
examples/agents/fleet/flagships/: auto_zerocode_ipparalegal.py  lg_credit_analyst.py  lg_react_pharmacovigilance.py  lg_supply_chain_ops.py  mcp_market_data.py  run_flagships.py
examples/agents/fleet/workflows/: README.md  base.py  registry.py  run_workflows.py
frontend/: .vercelignore  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/clusters/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/episodes/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/recall/: page.tsx
frontend/src/components/: Chart.tsx  SettingsModal.tsx  Sidebar.tsx  Toast.tsx
frontend/src/lib/: api-client.ts  api.ts  fleet-data.ts  supabase.ts  utils.ts
github-action/: action.yml
merger/: __init__.py  baselines.py  cluster.py  drift.py  failure_memory.py  fingerprint.py  input_baselines.py  merger.py  procedural.py  test_merger.py  worker.py
sdk/: __init__.py  episodic_sdk.py  produce_realistic_trace.py  produce_trace.py  pyproject.toml  schema.sql  setup.py  test_sdk.py
tests/: __init__.py  fakes.py  test_api_contract.py  test_auto_instrumentation.py  test_datasets_router.py  test_edge_cases.py  test_eval_memory.py  test_eval_rules.py  test_failures_router.py  test_key_management.py  test_langgraph_agents_live.py  test_live_eval.py  test_live_policy.py  test_metrics.py  test_phase2_memory.py  test_phase3_eval.py  test_property_metrics.py  test_property_tracers.py  test_rate_limiter.py  test_real_fleet.py  test_redteam_synthetic.py  test_sdk.py  test_session.py  test_tracers.py  test_workflows.py
(+22 files in other folders)
