[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ageval-sdk"
version = "0.3.0"
description = "Episodic evaluation framework for LLM agents — works with any framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
]
authors = [
    {name = "Jeel Thummar"}
]
license = {text = "MIT"}
keywords = ["llm", "agent", "evaluation", "tracing", "observability", "langchain", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# For LangGraph/LangChain agents
langchain = ["langchain-core>=0.2", "langsmith>=0.1"]
# For OpenAI function-calling agents
openai = ["openai>=1.0"]
# For running the server
server = ["fastapi>=0.100", "uvicorn[standard]", "supabase", "redis>=5.0", "scikit-learn", "numpy"]
# Everything (self-reference must use the distribution name: ageval-sdk)
all = ["ageval-sdk[langchain,openai,server,otel]"]
# Development
dev = ["pytest>=7", "ruff", "mypy"]
# OpenTelemetry
otel = ["opentelemetry-api"]

[project.scripts]
ageval-setup = "ageval.cli:main"

[project.urls]
Homepage = "https://github.com/Jeel3011/AGeval"
Repository = "https://github.com/Jeel3011/AGeval"
Documentation = "https://github.com/Jeel3011/AGeval#readme"
"Bug Tracker" = "https://github.com/Jeel3011/AGeval/issues"

[tool.setuptools.packages.find]
include = ["ageval", "ageval.*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501", "E402"]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
# Only collect the real unit suite by default. The scripts at the repo root
# (e2e_test.py, real_agent_test.py) and sdk/test_sdk.py, eval/test_rules.py are
# live integration scripts that talk to a deployed server + Supabase at import
# time — they break `pytest` collection when run offline. Invoke those directly
# (e.g. `python e2e_test.py`) against a live environment instead.
testpaths = ["tests"]
