[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ageval"
version = "0.1.0"
description = "Episodic evaluation framework for LangGraph agents"
requires-python = ">=3.11"
dependencies = [
    "supabase",
    "python-dotenv",
    "langsmith",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ageval*"]