[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ageval"
version = "0.2.0"
description = "Episodic evaluation framework for LangGraph agents"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
]
authors = [
    {name = "Jeel Thummar", email = "jeel@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ageval*"]